Changes from 1.01-6 to 1.0-7 [04-May-2017]

- pushed lm.fit/lm.wfit throughout... 20-20% speed gain, more robust than lm
- added option for auto.basis to remove (by default for the moment) the taylor basis from being evaluated (hopelessly inefficient for large numbers of predictors)
- migrated Simon Wood's tensor.product.model.matrix() (he now uses more efficient C code, previously R code)

Changes from 1.01-5 to 1.0-6 [28-Apr-2017]

- added auto.reduce feature to restrict the number of candidate models to lie below an arbitrary (user-controlled) cutoff
- added numerous demos (e.g. demo(cps71,package="ma"))
- added Koenker's India child nutrition data (semiparametric additive model)
- fixed glitch when vc=FALSE with basis="additive" etc.
- removed redundant code snippet from parallel anova
- num.z or num.x = 1, S*log(num.*) has no effect, using log(1+num.*), decreased default S=2 to S=1 (no need for lambda.S, already spans appropriately)

Changes from 1.01-4 to 1.0-5 [22-Apr-2017]

- too aggressive on tamping down on model dimension as p and k increase so instead of a penalty /k /p trying /sqrt(k) /sqrt(p)

Changes from 1.01-3 to 1.0-4 [19-Apr-2017]

- big subtle roach squashed - corrected glitch that could arise when computing derivatives and multiple predictors have degree 0 when using glp basis

- first truly functioning version since incorporating parallel, extensive fumigation, degree zero and lambda grid

Changes from 1.01-2 to 1.0-3 [17-Apr-2017]

- believe the glitch in multivariate derivatives with zero degree bases is fixed

- added grid lambda capability, modified defaults

- only report singular candidate bases if they receive non-zero weight in the final model

Changes from 1.01-1 to 1.0-2 [14-Apr-2017]

- added parallel capabilities to intensive parts (generating candidate models, bootstrapping, anova)
