@@ -11,7 +11,7 @@ lm.ma.formula <- function(formula,
                           X.eval=NULL,
                           all.combinations=TRUE,
                           alpha=0.05,
-                          auto.basis=c("tensor","additive"),
+                          auto.basis=c("tensor","taylor","additive"),
                           auto.reduce=TRUE,
                           B=99,
                           basis.vec=NULL,
@@ -140,7 +140,7 @@ lm.ma.default <- function(y=NULL,
                           X.eval=NULL,
                           all.combinations=TRUE,
                           alpha=0.05,
-                          auto.basis=c("tensor","additive"),
+                          auto.basis=c("tensor","taylor","additive"),
                           auto.reduce=TRUE,
                           B=99,
                           basis.vec=NULL,
@@ -1266,7 +1266,7 @@ lm.ma.Est <- function(y=NULL,
                       X=NULL,
                       X.eval=NULL,
                       all.combinations=TRUE,
-                      auto.basis=c("tensor","additive"),
+                      auto.basis=c("tensor","taylor","additive"),
                       auto.reduce=TRUE,
                       basis.vec=NULL,
                       basis=c("auto","tensor","taylor","additive"),
