@@ -20,35 +20,134 @@
 taylor.model.matrix <- function(X) {
 
   k <-length(X)
-  dimen.list <- list()
   dimen <- numeric()
   for(i in 1:k) {
     dimen[i] <- ncol(X[[i]])
-    dimen.list[[i]] <- 0:dimen[i]
   }
-  z <- do.call("expand.grid", dimen.list, k)
-  s <- rowSums(z)
-  ind <- (s > 0) & (s <= max(dimen))
-  z <- z[ind, ,drop=FALSE]
-  if(!all(dimen==max(dimen))) {
-    for(j in 1:length(dimen)) {
-      d <- dimen[j]
-      if((d < max(dimen)) & (d > 0)) {
-        s <- rowSums(z)
-        d <- (s > d) & (z[,j,drop=FALSE]==matrix(d,nrow(z),1,byrow=TRUE))
-        z <- z[!d, ]
+
+	index.swap <- function(index.input)
+	{
+			index.ret <- 1:length(index.input)
+			index <- 1:length(index.input)
+			for (i in 1:length(index.input))
+			{
+					index.ret[i] <- index[index.input==i]
+			}
+
+			return (index.ret)
+	}
+
+  two.dimen<- function(d1,d2,d2p,nd1,pd12,d1sets)
+	{
+    if(d2 == 1) {
+      ret <- list()
+      ret$d12 <- pd12
+      ret$nd1 <- nd1
+      ret$d2p <- d2
+      ret$sets <- cbind(d1sets,0)
+      return(ret)
+    }
+    d12 <- d2
+    d2sets <- cbind(matrix(0,nrow=min(NROW(d1sets),d2),ncol=NCOL(d1sets)),seq(1:d2))
+    if(d1-d2>0){
+      for(i in 1:(d1-d2)){
+        d12 <- d12+d2*nd1[i]
+        oneSet <- d1sets
+        if(NCOL(d1sets) > 1 & d2p > 0)
+          oneSet <- d1sets[d1sets[,NCOL(d1sets)]!=d2p,]  #previous d2
+        d2sets <- rbind(d2sets,cbind(matrix(oneSet[rowSums(oneSet)==i,],nrow=NROW(oneSet[rowSums(oneSet)==i,]),ncol=NCOL(d1sets))[rep(1:NROW(oneSet[rowSums(oneSet)==i,]),d2),],rep(0:(d2-1),each=nd1[i])))
       }
     }
+
+    for(i in 1:d2){
+      d12 <- d12 + (i*nd1[d1-i+1])
+      if(nd1[d1-i+1]>0){
+        oneSet <- d1sets
+        if(NCOL(d1sets) > 1 & d2p > 0)
+          oneSet <- d1sets[d1sets[,NCOL(d1sets)]!=d2p,]  #previous d2
+        d2sets <- rbind(d2sets,cbind(matrix(oneSet[rowSums(oneSet)==d1-i+1,],nrow=NROW(oneSet[rowSums(oneSet)==d1-i+1,]),ncol=NCOL(d1sets))[rep(1:NROW(oneSet[rowSums(oneSet)==d1-i+1,]),i),],rep(0:(i-1), each=nd1[d1-i+1])))
+      }
+    }
+
+    nd2 <- nd1  ## Calculate nd2
+    if(d1>1){
+      for(j in 1:(d1-1)) {
+        nd2[j] <- 0
+        for(i in j:max(0,j-d2+1)) {
+          if(i > 0) {
+            nd2[j] <- nd2[j] + nd1[i]                  
+          }
+          else {
+            nd2[j] <- nd2[j] + 1  ## nd1[0] always 1
+          }
+        }
+      }
+    }
+    if(d2>1) {
+      nd2[d1] <- nd1[d1]
+      for(i in (d1-d2+1):(d1-1)) nd2[d1] <- nd2[d1]+nd1[i]
+    }
+    else {
+      nd2[d1] <- nd1[d1]
+    }
+    ret <- list()
+    ret$d12 <- d12
+    ret$nd1 <- nd2
+    ret$d2p <- d2
+    ret$sets <- d2sets
+    
+    return(ret)
   }
 
-  ## http://musicallyut.blogspot.ca/2012/07/pre-allocate-your-vectors.html
-## Again, a common topic I won't dwell on too much. Essentially, R is bad at continually re-sizing objects, because it makes an extra copy of these objects each time. So if you have a loop that creates a vector or list, don't append to the vector or list with each pass of the loop. Instead, make an empty object of the correct size first, then fill in its elements.
+	construct.tensor.prod <- function(dimen.input)
+	{
+			dimen <- sort(dimen.input, decreasing = TRUE)
 
-  ## Is this relevant?
+			nd1 <- rep(1,dimen[1])   ## At the beginning,  we have one for [1, 2, 3, ..., dimen[1]]
+			nd1[dimen[1]] <- 0       ## nd1 represents the frequency for every element of [1, 2, 3, ..., dimen[1]]
+			ncol.bs <- dimen[1]
+			sets <- 1:dimen[1]
+			dim(sets)<- c(dimen[1],1)
+			d2p <- 0
 
-  res <- cbind(1, X[[1]])[, 1 + z[, 1]]
-  if(k > 1) for (i in 2:k) res <- res * cbind(1, X[[i]])[, 1 + z[, i]]
-  return(matrix(res,nrow=NROW(X[[1]])))
+			if(k>1) {
+					for(i in 2:k) {
+							dim.rt <- two.dimen(dimen[1],dimen[i],d2p,nd1,ncol.bs,sets)
+							nd1 <- dim.rt$nd1
+							ncol.bs <- dim.rt$d12
+							sets <- dim.rt$sets
+							d2p <- dim.rt$d2p
+					}
+					ncol.bs <- dim.rt$d12+k-1
+					for(i in 2:k)
+					{
+							oneRow <- rep(0, NCOL(sets))
+							oneRow[i-1] <- dimen[i-1]
+							sets <- rbind(sets, oneRow)
+					}
+			}
+
+			return(sets[, index.swap(order(dimen.input, decreasing = TRUE)), drop = FALSE])
+	}
+
+	z <- construct.tensor.prod(dimen)
+## if we don't want to get the same order as using the expand.grid method, we can comment the following two lines.
+	rownames(z) <- 1:NROW(z)
+	z <- z[do.call('order', as.list(data.frame(z[, NCOL(z):1]))), ]
+
+# X is a list of model matrices, from which a tensor product model matrix is to be produced.
+# e.g. ith row is basically X[[1]][i,]%x%X[[2]][i,]%x%X[[3]][i,], but this routine works 
+# column-wise, for efficiency, and does work in compiled code.
+  m <- length(X)              ## number to row tensor product
+  d <- unlist(lapply(X,ncol)) ## dimensions of each X
+  n <- nrow(X[[1]])           ## columns in each X
+	zn <- NROW(z)
+  X <- as.numeric(unlist(X))  ## append X[[i]]s columnwise
+  z <- as.integer(unlist(z))  ## append z's columnwise
+  res <- numeric(n*zn)     ## storage for result
+  .Call(taylor_model_tmm,X,z, res,d,m,n, zn)   ## produce product
+
+	return(matrix(res,nrow=n))
 
 }
 
