@@ -14,7 +14,7 @@ lm.ma(...)
       X.eval = NULL,
       all.combinations = TRUE,
       alpha = 0.05,
-      auto.basis = c("tensor","additive"),
+      auto.basis = c("tensor","taylor","additive"),
       auto.reduce = TRUE,
       B = 99,
       basis.vec = NULL,
@@ -64,7 +64,7 @@ lm.ma(...)
       X.eval = NULL,
       all.combinations = TRUE,
       alpha = 0.05,
-      auto.basis = c("tensor","additive"),
+      auto.basis = c("tensor","taylor","additive"),
       auto.reduce = TRUE,
       B = 99,
       basis.vec = NULL,
